--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,65 @@
     <artifactId>commons-parent</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <!--lombok & logback-->
+        <dependency>
+            <artifactId>lombok</artifactId>
+            <groupId>org.projectlombok</groupId>
+            <scope>provided</scope>
+            <version>${lombok.version}</version>
+        </dependency>
+        <dependency>
+            <artifactId>slf4j-api</artifactId>
+            <groupId>org.slf4j</groupId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <artifactId>logback-classic</artifactId>
+            <groupId>ch.qos.logback</groupId>
+            <version>${logback.version}</version>
+        </dependency>
+    </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <!--apache commons-->
+            <dependency>
+                <artifactId>commons-lang3</artifactId>
+                <groupId>org.apache.commons</groupId>
+                <version>${commons-lang3.version}</version>
+            </dependency>
+            <dependency>
+                <artifactId>commons-collections4</artifactId>
+                <groupId>org.apache.commons</groupId>
+                <version>${commons-collections4.version}</version>
+            </dependency>
+
+            <!--complete set of compatible versions of Jackson components-->
+            <dependency>
+                <artifactId>jackson-bom</artifactId>
+                <groupId>com.fasterxml.jackson</groupId>
+                <scope>import</scope>
+                <type>pom</type>
+                <version>${jackson-bom.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <modules>
         <module>commons-internet</module>
         <module>commons-lang</module>
+        <module>commons-system</module>
     </modules>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <commons-collections4.version>4.4</commons-collections4.version>
+        <commons-lang3.version>3.10</commons-lang3.version>
+        <jackson-bom.version>2.11.4</jackson-bom.version>
+        <logback.version>1.2.3</logback.version>
+        <lombok.version>1.18.20</lombok.version>
+        <slf4j.version>1.7.30</slf4j.version>
     </properties>
-
 </project>
