Adds module commons-system to handle system-related operations. Adds the executor implementation of command line and ffmpeg as its example.

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
 
     <dependencyManagement>
         <dependencies>
+            <!--sub modules-->
+            <dependency>
+                <artifactId>commons-lang</artifactId>
+                <groupId>cn.wsg.commons</groupId>
+                <version>${commons-parent.version}</version>
+            </dependency>
+
             <!--apache commons-->
             <dependency>
                 <artifactId>commons-lang3</artifactId>
@@ -40,6 +47,11 @@
                 <artifactId>commons-collections4</artifactId>
                 <groupId>org.apache.commons</groupId>
                 <version>${commons-collections4.version}</version>
+            </dependency>
+            <dependency>
+                <artifactId>commons-io</artifactId>
+                <groupId>commons-io</groupId>
+                <version>${commons-io.version}</version>
             </dependency>
 
             <!--complete set of compatible versions of Jackson components-->
@@ -64,6 +76,8 @@
         <maven.compiler.target>11</maven.compiler.target>
         <commons-collections4.version>4.4</commons-collections4.version>
         <commons-lang3.version>3.10</commons-lang3.version>
+        <commons-io.version>2.11.0</commons-io.version>
+        <commons-parent.version>1.0-SNAPSHOT</commons-parent.version>
         <jackson-bom.version>2.11.4</jackson-bom.version>
         <logback.version>1.2.3</logback.version>
         <lombok.version>1.18.20</lombok.version>
