--- a/pom.xml
+++ b/pom.xml
@@ -1,38 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cn.wsg.commons</groupId>
     <artifactId>commons-parent</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-
-    <modules>
-        <module>commons-internet</module>
-        <module>commons-lang</module>
-        <module>commons-system</module>
-        <module>commons-web</module>
-    </modules>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <wsg.commons.version>1.0-SNAPSHOT</wsg.commons.version>
-        <commons-collections4.version>4.4</commons-collections4.version>
-        <commons-lang3.version>3.10</commons-lang3.version>
-        <commons-io.version>2.11.0</commons-io.version>
-        <httpclient.version>4.5.13</httpclient.version>
-        <mybatis.version>3.5.7</mybatis.version>
-        <jsoup.version>1.11.3</jsoup.version>
-        <jackson-bom.version>2.11.4</jackson-bom.version>
-        <logback.version>1.2.3</logback.version>
-        <lombok.version>1.18.20</lombok.version>
-        <slf4j.version>1.7.30</slf4j.version>
-        <junit.version>5.7.2</junit.version>
-    </properties>
 
     <dependencies>
         <!--lombok & logback-->
@@ -55,10 +30,10 @@
 
         <!--junit 5-->
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>${junit.version}</version>
+            <groupId>org.junit.jupiter</groupId>
             <scope>test</scope>
+            <version>${junit.version}</version>
         </dependency>
     </dependencies>
 
@@ -86,6 +61,21 @@
                 <artifactId>commons-io</artifactId>
                 <groupId>commons-io</groupId>
                 <version>${commons-io.version}</version>
+            </dependency>
+            <dependency>
+                <artifactId>commons-csv</artifactId>
+                <groupId>org.apache.commons</groupId>
+                <version>${commons-csv.version}</version>
+            </dependency>
+            <dependency>
+                <artifactId>poi</artifactId>
+                <groupId>org.apache.poi</groupId>
+                <version>${poi.version}</version>
+            </dependency>
+            <dependency>
+                <artifactId>poi-ooxml</artifactId>
+                <groupId>org.apache.poi</groupId>
+                <version>${poi.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
@@ -128,4 +118,32 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <modules>
+        <module>commons-internet</module>
+        <module>commons-lang</module>
+        <module>commons-system</module>
+        <module>commons-web</module>
+        <module>commons-data</module>
+    </modules>
+
+    <properties>
+        <commons-collections4.version>4.4</commons-collections4.version>
+        <commons-csv.version>1.8</commons-csv.version>
+        <commons-io.version>2.11.0</commons-io.version>
+        <commons-lang3.version>3.10</commons-lang3.version>
+        <httpclient.version>4.5.13</httpclient.version>
+        <jackson-bom.version>2.11.4</jackson-bom.version>
+        <jsoup.version>1.11.3</jsoup.version>
+        <junit.version>5.7.2</junit.version>
+        <logback.version>1.2.3</logback.version>
+        <lombok.version>1.18.20</lombok.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <mybatis.version>3.5.7</mybatis.version>
+        <poi.version>4.1.2</poi.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <slf4j.version>1.7.30</slf4j.version>
+        <wsg.commons.version>1.0-SNAPSHOT</wsg.commons.version>
+    </properties>
 </project>
