--- a/commons-internet/pom.xml
+++ b/commons-internet/pom.xml
@@ -26,6 +26,10 @@
             <artifactId>commons-collections4</artifactId>
         </dependency>
         <dependency>
+            <artifactId>commons-io</artifactId>
+            <groupId>commons-io</groupId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
         </dependency>
