--- a/commons-internet/pom.xml
+++ b/commons-internet/pom.xml
@@ -30,6 +30,10 @@
             <groupId>commons-io</groupId>
         </dependency>
         <dependency>
+            <artifactId>commons-text</artifactId>
+            <groupId>org.apache.commons</groupId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
         </dependency>
@@ -40,6 +44,10 @@
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
+        </dependency>
+        <dependency>
+            <artifactId>guava</artifactId>
+            <groupId>com.google.guava</groupId>
         </dependency>
     </dependencies>
 </project>
