--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
                 <version>${commons-io.version}</version>
             </dependency>
             <dependency>
+                <artifactId>commons-text</artifactId>
+                <groupId>org.apache.commons</groupId>
+                <version>${commons-text.version}</version>
+            </dependency>
+            <dependency>
                 <artifactId>commons-csv</artifactId>
                 <groupId>org.apache.commons</groupId>
                 <version>${commons-csv.version}</version>
@@ -101,6 +106,13 @@
                 <version>${jsoup.version}</version>
             </dependency>
 
+            <!--google guava-->
+            <dependency>
+                <artifactId>guava</artifactId>
+                <groupId>com.google.guava</groupId>
+                <version>${guava.version}</version>
+            </dependency>
+
             <!--complete set of compatible versions of Jackson components-->
             <dependency>
                 <artifactId>jackson-bom</artifactId>
@@ -131,10 +143,12 @@
         <commons-collections4.version>4.4</commons-collections4.version>
         <commons-csv.version>1.8</commons-csv.version>
         <commons-io.version>2.11.0</commons-io.version>
+        <commons-text.version>1.9</commons-text.version>
         <commons-lang3.version>3.10</commons-lang3.version>
         <httpclient.version>4.5.13</httpclient.version>
         <jackson-bom.version>2.11.4</jackson-bom.version>
         <jsoup.version>1.11.3</jsoup.version>
+        <guava.version>31.0.1-jre</guava.version>
         <junit.version>5.7.2</junit.version>
         <logback.version>1.2.3</logback.version>
         <lombok.version>1.18.20</lombok.version>
