--- a/commons-lang/pom.xml
+++ b/commons-lang/pom.xml
@@ -13,6 +13,10 @@
             <groupId>org.apache.commons</groupId>
         </dependency>
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
+        <dependency>
             <artifactId>jackson-databind</artifactId>
             <groupId>com.fasterxml.jackson.core</groupId>
         </dependency>
