--- a/commons-internet/pom.xml
+++ b/commons-internet/pom.xml
@@ -18,6 +18,10 @@
             <artifactId>commons-lang</artifactId>
         </dependency>
         <dependency>
+            <groupId>cn.wsg.commons</groupId>
+            <artifactId>commons-data</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
