--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
     <lombok.version>1.18.26</lombok.version>
     <slf4j.version>2.0.5</slf4j.version>
-    <logback.version>1.4.6</logback.version>
+    <logback.version>1.4.7</logback.version>
     <junit.version>5.9.2</junit.version>
 
     <commons-lang3.version>3.11</commons-lang3.version>
@@ -36,6 +36,7 @@
     <jsoup.version>1.11.3</jsoup.version>
     <guava.version>31.0.1-jre</guava.version>
     <jackson-bom.version>2.12.6</jackson-bom.version>
+    <jakarta.persistence.version>2.2.3</jakarta.persistence.version>
   </properties>
 
   <dependencies>
@@ -150,6 +151,12 @@
         <artifactId>guava</artifactId>
         <groupId>com.google.guava</groupId>
         <version>${guava.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>jakarta.persistence</groupId>
+        <artifactId>jakarta.persistence-api</artifactId>
+        <version>${jakarta.persistence.version}</version>
       </dependency>
 
       <!--complete set of compatible versions of Jackson components-->
