--- a/commons-lang/pom.xml
+++ b/commons-lang/pom.xml
@@ -6,26 +6,18 @@
   <parent>
     <groupId>cn.kingen.commons</groupId>
     <artifactId>commons-parent</artifactId>
-    <version>1.0.0</version>
+    <version>2.0.0</version>
   </parent>
   <artifactId>commons-lang</artifactId>
 
   <dependencies>
     <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-collections4</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
