--- a/commons-system/pom.xml
+++ b/commons-system/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>cn.kingen.commons</groupId>
     <artifactId>commons-parent</artifactId>
-    <version>1.0.0</version>
+    <version>2.0.0</version>
   </parent>
   <artifactId>commons-system</artifactId>
 
@@ -16,15 +16,24 @@
       <artifactId>commons-lang</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-csv</artifactId>
-    </dependency>
-
-    <!-- MinIO -->
-    <dependency>
-      <artifactId>minio</artifactId>
       <groupId>io.minio</groupId>
-      <version>8.5.2</version>
+      <artifactId>minio</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
     </dependency>
   </dependencies>
 </project>
