--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <groupId>cn.kingen.commons</groupId>
   <artifactId>commons-parent</artifactId>
   <packaging>pom</packaging>
-  <version>1.0.0</version>
+  <version>2.0.0</version>
 
   <modules>
     <module>commons-lang</module>
@@ -16,56 +16,16 @@
   </modules>
 
   <properties>
-    <kingen.commons.version>1.0.0</kingen.commons.version>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
+    <java.version>17</java.version>
+    <maven.compiler.source>${java.version}</maven.compiler.source>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-    <lombok.version>1.18.26</lombok.version>
-    <slf4j.version>2.0.5</slf4j.version>
-    <logback.version>1.4.7</logback.version>
-    <junit.version>5.9.2</junit.version>
-
-    <commons-lang3.version>3.11</commons-lang3.version>
-    <commons-collections4.version>4.4</commons-collections4.version>
+    <spring-boot.version>3.1.5</spring-boot.version>
     <commons-io.version>2.11.0</commons-io.version>
-    <commons-text.version>1.9</commons-text.version>
-    <commons-csv.version>1.8</commons-csv.version>
-    <poi.version>4.1.2</poi.version>
-    <httpclient.version>4.5.13</httpclient.version>
-    <jsoup.version>1.11.3</jsoup.version>
-    <guava.version>31.0.1-jre</guava.version>
-    <jackson-bom.version>2.12.6</jackson-bom.version>
-    <jakarta.persistence.version>2.2.3</jakarta.persistence.version>
+    <minio.version>8.5.2</minio.version>
   </properties>
-
-  <dependencies>
-    <!--lombok & logback-->
-    <dependency>
-      <artifactId>lombok</artifactId>
-      <groupId>org.projectlombok</groupId>
-      <scope>provided</scope>
-      <version>${lombok.version}</version>
-    </dependency>
-    <dependency>
-      <artifactId>slf4j-api</artifactId>
-      <groupId>org.slf4j</groupId>
-      <version>${slf4j.version}</version>
-    </dependency>
-    <dependency>
-      <artifactId>logback-classic</artifactId>
-      <groupId>ch.qos.logback</groupId>
-      <version>${logback.version}</version>
-    </dependency>
-
-    <!--junit 5-->
-    <dependency>
-      <artifactId>junit-jupiter</artifactId>
-      <groupId>org.junit.jupiter</groupId>
-      <scope>test</scope>
-      <version>${junit.version}</version>
-    </dependency>
-  </dependencies>
 
   <dependencyManagement>
     <dependencies>
@@ -73,118 +33,38 @@
       <dependency>
         <groupId>cn.kingen.commons</groupId>
         <artifactId>commons-lang</artifactId>
-        <version>${kingen.commons.version}</version>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>cn.kingen.commons</groupId>
         <artifactId>commons-data</artifactId>
-        <version>${kingen.commons.version}</version>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>cn.kingen.commons</groupId>
         <artifactId>commons-system</artifactId>
-        <version>${kingen.commons.version}</version>
+        <version>${project.version}</version>
       </dependency>
 
-      <!--apache commons-->
       <dependency>
-        <artifactId>commons-lang3</artifactId>
-        <groupId>org.apache.commons</groupId>
-        <version>${commons-lang3.version}</version>
+        <!-- Import dependency management from Spring Boot -->
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-dependencies</artifactId>
+        <version>${spring-boot.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
+
       <dependency>
-        <artifactId>commons-collections4</artifactId>
-        <groupId>org.apache.commons</groupId>
-        <version>${commons-collections4.version}</version>
-      </dependency>
-      <dependency>
-        <artifactId>commons-io</artifactId>
         <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
         <version>${commons-io.version}</version>
       </dependency>
       <dependency>
-        <artifactId>commons-text</artifactId>
-        <groupId>org.apache.commons</groupId>
-        <version>${commons-text.version}</version>
-      </dependency>
-      <dependency>
-        <artifactId>commons-csv</artifactId>
-        <groupId>org.apache.commons</groupId>
-        <version>${commons-csv.version}</version>
-      </dependency>
-      <dependency>
-        <artifactId>poi</artifactId>
-        <groupId>org.apache.poi</groupId>
-        <version>${poi.version}</version>
-      </dependency>
-      <dependency>
-        <artifactId>poi-ooxml</artifactId>
-        <groupId>org.apache.poi</groupId>
-        <version>${poi.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.httpcomponents</groupId>
-        <artifactId>httpclient</artifactId>
-        <version>${httpclient.version}</version>
-        <exclusions>
-          <exclusion>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.httpcomponents</groupId>
-        <artifactId>httpclient-cache</artifactId>
-        <version>${httpclient.version}</version>
-      </dependency>
-
-      <!--jsoup-->
-      <dependency>
-        <groupId>org.jsoup</groupId>
-        <artifactId>jsoup</artifactId>
-        <version>${jsoup.version}</version>
-      </dependency>
-
-      <!--google guava-->
-      <dependency>
-        <artifactId>guava</artifactId>
-        <groupId>com.google.guava</groupId>
-        <version>${guava.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>jakarta.persistence</groupId>
-        <artifactId>jakarta.persistence-api</artifactId>
-        <version>${jakarta.persistence.version}</version>
-      </dependency>
-
-      <!--complete set of compatible versions of Jackson components-->
-      <dependency>
-        <artifactId>jackson-bom</artifactId>
-        <groupId>com.fasterxml.jackson</groupId>
-        <scope>import</scope>
-        <type>pom</type>
-        <version>${jackson-bom.version}</version>
+        <artifactId>minio</artifactId>
+        <groupId>io.minio</groupId>
+        <version>${minio.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>3.2.1</version>
-        <executions>
-          <execution>
-            <id>attach-source</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
 </project>
