--- a/pom.xml
+++ b/pom.xml
@@ -1,70 +1,97 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>cn.kingen.commons</groupId>
-  <artifactId>commons-parent</artifactId>
-  <packaging>pom</packaging>
-  <version>2.0.0</version>
+    <groupId>cn.kingen.commons</groupId>
+    <artifactId>commons-parent</artifactId>
+    <packaging>pom</packaging>
+    <version>2.0.0</version>
 
-  <modules>
-    <module>commons-lang</module>
-    <module>commons-data</module>
-    <module>commons-system</module>
-  </modules>
+    <modules>
+        <module>commons-lang</module>
+        <module>commons-data</module>
+        <module>commons-system</module>
+    </modules>
 
-  <properties>
-    <java.version>17</java.version>
-    <maven.compiler.source>${java.version}</maven.compiler.source>
-    <maven.compiler.target>${java.version}</maven.compiler.target>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <properties>
+        <java.version>17</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <spring-boot.version>3.1.5</spring-boot.version>
-    <commons-io.version>2.11.0</commons-io.version>
-    <minio.version>8.5.2</minio.version>
-  </properties>
+        <spring-boot.version>3.1.5</spring-boot.version>
+        <commons-io.version>2.11.0</commons-io.version>
+        <commons-beanutils.version>1.9.4</commons-beanutils.version>
+        <poi.version>5.2.3</poi.version>
+        <minio.version>8.5.2</minio.version>
+        <ffmpeg-platform.version>6.1.1-1.5.10</ffmpeg-platform.version>
+    </properties>
 
-  <dependencyManagement>
-    <dependencies>
-      <!--sub modules-->
-      <dependency>
-        <groupId>cn.kingen.commons</groupId>
-        <artifactId>commons-lang</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>cn.kingen.commons</groupId>
-        <artifactId>commons-data</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>cn.kingen.commons</groupId>
-        <artifactId>commons-system</artifactId>
-        <version>${project.version}</version>
-      </dependency>
+    <dependencyManagement>
+        <dependencies>
+            <!--sub modules-->
+            <dependency>
+                <groupId>cn.kingen.commons</groupId>
+                <artifactId>commons-lang</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.kingen.commons</groupId>
+                <artifactId>commons-data</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.kingen.commons</groupId>
+                <artifactId>commons-system</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
-      <dependency>
-        <!-- Import dependency management from Spring Boot -->
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-dependencies</artifactId>
-        <version>${spring-boot.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
+            <dependency>
+                <!-- Import dependency management from Spring Boot -->
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
 
-      <dependency>
-        <groupId>commons-io</groupId>
-        <artifactId>commons-io</artifactId>
-        <version>${commons-io.version}</version>
-      </dependency>
-      <dependency>
-        <artifactId>minio</artifactId>
-        <groupId>io.minio</groupId>
-        <version>${minio.version}</version>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
+            <dependency>
+                <groupId>commons-beanutils</groupId>
+                <artifactId>commons-beanutils</artifactId>
+                <version>${commons-beanutils.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${commons-io.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi</artifactId>
+                <version>${poi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-ooxml</artifactId>
+                <version>${poi.version}</version>
+            </dependency>
+            <dependency>
+                <artifactId>minio</artifactId>
+                <groupId>io.minio</groupId>
+                <version>${minio.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.bytedeco</groupId>
+                <artifactId>ffmpeg</artifactId>
+                <version>${ffmpeg-platform.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.bytedeco</groupId>
+                <artifactId>ffmpeg-platform</artifactId>
+                <version>${ffmpeg-platform.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
