--- a/commons-data/pom.xml
+++ b/commons-data/pom.xml
@@ -15,5 +15,9 @@
       <groupId>cn.kingen.commons</groupId>
       <artifactId>commons-lang</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-text</artifactId>
+    </dependency>
   </dependencies>
 </project>
